fix flex-wrap

--- a/portal/style.css
+++ b/portal/style.css
@@ -74,13 +74,14 @@ Applications list
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .application_item {
     width: 220px;
     height: 330px;
     border-radius: 1rem;
-    margin: 0 0.5rem;
+    margin: 0.5rem 0.5rem;
     cursor: pointer;
 }
 
